@@ -89,9 +89,7 @@
                   <MEECROWAVE_BASE>${docker.talend.dir.app}</MEECROWAVE_BASE>
                   <MEECROWAVE_PID>${docker.talend.dir.app}conf/server.pid</MEECROWAVE_PID>
                   <MEECROWAVE-PROPERTIES>${docker.talend.dir.app}conf/meecrowave.properties</MEECROWAVE-PROPERTIES>
-                  <TALEND_JDK_SERIAL_FILTER>oracle.sql.**;!*</TALEND_JDK_SERIAL_FILTER>
                   <CLASSPATH>${docker.talend.dir.app}lib/*:${docker.talend.dir.app}custom/*:${docker.talend.dir.base}extensions/*:${docker.talend.dir.app}resources:${docker.talend.dir.app}classes</CLASSPATH>
-                  <JDK_JAVA_OPTIONS>-Djdk.serialFilter=${TALEND_JDK_SERIAL_FILTER} -agentlib:jdwp=server=y,transport=dt_socket,suspend=y,address=*:5005 -Djava.security.egd=file:/dev/./urandom -Djava.io.tmpdir=${docker.talend.dir.app}temp -Dhttp=${docker.image.port} -Dmeecrowave.home=${docker.talend.dir.app} -Dmeecrowave.base=${docker.talend.dir.app} -Dmeecrowave-properties=${docker.talend.dir.app}conf/meecrowave.properties -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Dlog4j.configurationFile=${docker.talend.dir.app}conf/log4j2.xml --add-opens java.base/java.util=ALL-UNNAMED</JDK_JAVA_OPTIONS>
                 </environment>
                 <labels>
                   <com.talend.docker.cmd>docker run -d -p ${docker.image.port}:${docker.image.port} ${docker.image.to}</com.talend.docker.cmd>
